--- a/app/frontend/src/app/insurance_quotes/component/create-insurance-quote/create-insurance-quote.component.html
+++ b/app/frontend/src/app/insurance_quotes/component/create-insurance-quote/create-insurance-quote.component.html
@@ -1,86 +1,135 @@
 <div class="container">
-    <mat-card>
-      <mat-card-header>
-        <mat-card-title>
-          <h3>Nova simulação</h3>
-        </mat-card-title>
-      </mat-card-header>
-  
-      <form [formGroup]="form" (ngSubmit)="onSubmit()" novalidate>
-  
-        <mat-card>
-          <mat-card-content class="mat-form-field-wrapper">
-            <mat-form-field appearance="outline" class="form-element">
-              <mat-label>Produto</mat-label>
-              <mat-select formControlName="product">
-                <mat-option *ngFor="let product of products" [value]="product">{{ product.id }} - {{ product.name }}</mat-option>
-              </mat-select>
-            </mat-form-field>
-          </mat-card-content>
-        </mat-card>
-      
-        <mat-card>
-          <mat-card-content>
-            <mat-radio-group formControlName="person_type">
-              <mat-label>Tipo Pessoa</mat-label>
-               <mat-radio-button [value]="'F'">Física</mat-radio-button>
-               <mat-radio-button [value]="'J'">Jurídica</mat-radio-button>
-            </mat-radio-group>
-            <mat-form-field appearance="outline" class="form-element">
-              <mat-label>Documento</mat-label>
-              <input matInput formControlName="document_number" class="form-element flex-fill" required>
-              <mat-hint align="start">{{form.controls['document_number'].value?.length || 0}}/256</mat-hint>
-            </mat-form-field>
-            </mat-card-content> 
-          </mat-card>
+  <mat-card>
+    <mat-card-header>
+      <mat-card-title>
+        <h3>Nova simulação</h3>
+      </mat-card-title>
+    </mat-card-header>
 
-          <mat-card>
-            <mat-card-content>
-              <mat-form-field appearance="outline" class="form-element">
-                <mat-label>Nome</mat-label>
-                <input matInput formControlName="name" class="form-element flex-fill" required>
-                <mat-hint align="start">{{form.controls['name'].value?.length || 0}}/256</mat-hint>
-              </mat-form-field>
-            </mat-card-content> 
-          </mat-card>
+    <form [formGroup]="form" (ngSubmit)="onSubmit()">
 
-          <mat-card>
-            <mat-card-content>
-              <mat-radio-group formControlName="gender">
-                <mat-label>Sexo</mat-label>
-                 <mat-radio-button [value]="'M'">Masculino</mat-radio-button>
-                 <mat-radio-button [value]="'F'">Feminino</mat-radio-button>
-             </mat-radio-group>
+      <mat-card>
+        <mat-card-content class="mat-form-field-wrapper">
+          <mat-form-field appearance="outline" class="form-element">
+            <mat-label>Produto</mat-label>
+            <mat-select [(ngModel)]="selectedProduct" formControlName="product" (selectionChange)="onProductSelectionChange()">
+              <mat-option *ngFor="let product of products" [value]="product">{{ product.id }} - {{ product.name }}</mat-option>
+            </mat-select>
+          </mat-form-field>
+        </mat-card-content>
+      </mat-card>
 
-              <mat-form-field appearance="outline" class="form-element">
-                <mat-label>Data de Nascimento</mat-label>
-                <input matInput formControlName="date_of_birth" [matDatepicker]="picker" required>
-                <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
-                <mat-datepicker #picker></mat-datepicker>
-              </mat-form-field>   
-          </mat-card-content>
-        </mat-card>
+      <mat-card>
+        <mat-label><b>{{selectedProduct?.name}} - R$ {{selectedProduct?.suggested_total_monthly_premium_amount | currency:'BRL':'symbol':'2.2-2'}}</b></mat-label>
+      </mat-card>
 
-        <mat-card>
-          <mat-card-content>
-            <mat-form-field appearance="outline" class="form-element">
-              <mat-label>E-mail</mat-label>
-              <input matInput formControlName="e_mail" class="form-element flex-fill" ngModel [email]="true" required>
-              <mat-hint align="start">{{form.controls['e_mail'].value?.length || 0}}/256</mat-hint>
-            </mat-form-field>
+      <mat-accordion>
+        <mat-expansion-panel (opened)="panelOpenState = true" (closed)="panelOpenState = false">
+          <mat-expansion-panel-header>
+            <mat-panel-title>Coberturas</mat-panel-title>
+            <mat-panel-description>
+              Clique para visualizar
+            </mat-panel-description>
+          </mat-expansion-panel-header>
+          <table class="table table-striped table-bordered">
+            <thead>
+              <tr>
+                <th>Descrição</th>
+                <th>Valor</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr *ngFor="let coverage of selectedProduct?.coverages | keyvalue">
+                <td>{{coverage.key}}</td>
+                <td>R$ {{coverage.value}}</td>
+              </tr>
+            </tbody>
+          </table>
+        </mat-expansion-panel>
+        <mat-expansion-panel (opened)="panelOpenState = true" (closed)="panelOpenState = false">
+          <mat-expansion-panel-header>
+            <mat-panel-title>Assistências</mat-panel-title>
+            <mat-panel-description>
+              Clique para visualizar
+            </mat-panel-description>
+          </mat-expansion-panel-header>
+          <table class="table table-striped table-bordered">
+            <thead>
+              <tr>
+                <th>Descrição</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr *ngFor="let assistance of selectedProduct?.assistances">
+                <td>{{assistance}}</td>
+              </tr>
+            </tbody>
+          </table>
+        </mat-expansion-panel>
+      </mat-accordion>
 
-            <mat-form-field appearance="outline" class="form-element">
-              <mat-label>Telefone</mat-label>
-              <input matInput formControlName="phone_number" class="form-element flex-fill" ngModel [email]="true" required>
-              <mat-hint align="start">{{form.controls['phone_number'].value?.length || 0}}/10</mat-hint>
-            </mat-form-field>  
-          </mat-card-content>
-        </mat-card>
-  
-        <div class="centered-buttons">
-          <button mat-raised-button color="primary" type="submit">Calcular</button>
-        </div>
-     
-      </form>
-    </mat-card>
-  </div>
+      <mat-card>
+        <mat-card-content>
+          <mat-radio-group formControlName="person_type">
+            <mat-label>Tipo Pessoa</mat-label>
+            <mat-radio-button [value]="'F'">Física</mat-radio-button>
+            <mat-radio-button [value]="'J'">Jurídica</mat-radio-button>
+          </mat-radio-group>
+          <mat-form-field appearance="outline" class="form-element">
+            <mat-label>Documento</mat-label>
+            <input matInput formControlName="document_number" class="form-element flex-fill" required>
+            <mat-hint align="start">{{form.controls['document_number'].value?.length || 0}}/256</mat-hint>
+          </mat-form-field>
+        </mat-card-content>
+      </mat-card>
+
+      <mat-card>
+        <mat-card-content>
+          <mat-form-field appearance="outline" class="form-element">
+            <mat-label>Nome</mat-label>
+            <input matInput formControlName="name" class="form-element flex-fill" required>
+            <mat-hint align="start">{{form.controls['name'].value?.length || 0}}/256</mat-hint>
+          </mat-form-field>
+        </mat-card-content>
+      </mat-card>
+
+      <mat-card>
+        <mat-card-content>
+          <mat-radio-group formControlName="gender">
+            <mat-label>Sexo</mat-label>
+            <mat-radio-button [value]="'M'">Masculino</mat-radio-button>
+            <mat-radio-button [value]="'F'">Feminino</mat-radio-button>
+          </mat-radio-group>
+
+          <mat-form-field appearance="outline" class="form-element">
+            <mat-label>Data de Nascimento</mat-label>
+            <input matInput formControlName="date_of_birth" [matDatepicker]="picker" required>
+            <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
+            <mat-datepicker #picker></mat-datepicker>
+          </mat-form-field>
+        </mat-card-content>
+      </mat-card>
+
+      <mat-card>
+        <mat-card-content>
+          <mat-form-field appearance="outline" class="form-element">
+            <mat-label>E-mail</mat-label>
+            <input matInput formControlName="e_mail" class="form-element flex-fill" ngModel [email]="true" required>
+            <mat-hint align="start">{{form.controls['e_mail'].value?.length || 0}}/256</mat-hint>
+          </mat-form-field>
+
+          <mat-form-field appearance="outline" class="form-element">
+            <mat-label>Telefone</mat-label>
+            <input matInput formControlName="phone_number" class="form-element flex-fill" required>
+            <mat-hint align="start">{{form.controls['phone_number'].value?.length || 0}}/10</mat-hint>
+          </mat-form-field>
+        </mat-card-content>
+      </mat-card>
+
+      <div class="centered-buttons">
+        <button mat-raised-button color="primary" type="submit">Calcular</button>
+      </div>
+
+    </form>
+  </mat-card>
+</div>
